--- a/flutter_pomodoro_timer/pubspec.yaml
+++ b/flutter_pomodoro_timer/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sprintf: '^7.0.0'
+  fluttertoast: '^8.0.7'
 
 
   # The following adds the Cupertino Icons font to your application.
